# pysealer-experiments

./: .dockerignore  .gitignore  Dockerfile  README.md  example_output.txt  pyproject.toml  run_experiments.sh
output/: 3-26-2026_output.txt  3-27-2026_output
simulated-attacks/: Dockerfile  pyproject.toml  run_experiments.py
simulated-attacks/tool-poisoning/: execute_tool_poisoning_attack.py  mcp_config.json  post_tool_poisoning.py  pre_mcp_config.json  pre_tool_poisoning.py  tool_poisoning.py  unexecute_tool_poisoning_attack.py
simulated-attacks/tool-shadowing/: execute_tool_shadowing_attack.py  mcp_config.json  post_mcp_config.json  post_tool_shadowing.py  pre_mcp_config.json  pre_tool_shadowing.py  tool_shadowing.py  unexecute_tool_shadowing_attack.py
